Ensure account name can wrap

--- a/src/sass/components/_account-header.scss
+++ b/src/sass/components/_account-header.scss
@@ -41,6 +41,7 @@
 
 .das-account__account-name {
   margin: 0;
+  word-break: break-word;
   @include govuk-media-query($from: desktop) {
     font-size: 48px;
   }
